# RustModdingTool

./: .env  .gitignore  Cargo.toml  README.md  build.rs  build.sh
.cargo/: config.toml
src/: copy.rs  extract.rs  file_manager.rs  main.rs  profile_manager.rs  settings.rs
ui/: app-window.slint  grid_view.slint  profile-edit.slint  profile-grid.slint  profile-images.slint  profile-state.slint
