[package]
name = "OxideManager"
version = "0.4.1"
edition = "2024"

[dependencies]
sevenz-rust2 = "0.13.2"
slint = "1.12.0"
unrar = "0.5.8"
zip = "2.6.1"
rfd = "0.15.2"
rust-ini = "0.21.1"
dirs = "6.0.0"
steamgriddb_api = "0.3.1"
tokio = { version = "1.32.0", features = ["full"] }
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["blocking"] }
dotenv = "0.15.0"


[build-dependencies]
slint-build = "1.12.0"

